--- a/CustomViewOnDraw/app/src/main/res/layout/activity_main.xml
+++ b/CustomViewOnDraw/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
  >
@@ -10,8 +11,21 @@
         android:layout_width="150dp"
         android:background="#000000"
         android:paddingBottom="20dp"
+
         android:paddingTop="10dp"
         android:layout_margin="20dp"
         app:circle_color="@android:color/holo_blue_light"
         android:layout_height="wrap_content"/>
-</RelativeLayout>
+
+
+    <ImageView
+        android:id="@+id/iv"
+        android:layout_width="wrap_content"
+        android:src="@mipmap/ic_launcher"
+        android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/btn"
+        android:text="btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+</LinearLayout>
