--- a/IPCAidl/aidlClient/res/layout/activity_main.xml
+++ b/IPCAidl/aidlClient/res/layout/activity_main.xml
@@ -13,6 +13,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="获取列表" />
+    <Button
+        android:id="@+id/toList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Jump" />
 
 
 </LinearLayout>
